--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "flatpickr": "^4.6.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
