--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.1.3",
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
     "flatpickr": "^4.6.13",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
