--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
