--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -7,7 +7,9 @@
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
     "lucide-react": "^0.469.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
